--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,16 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  build-and-test:
+    docker:
+      - image: "cimg/base:stable"
+    steps:
+      - checkout
+      - node/install:
+          node-version: "16.14.2"
+      - node/install-packages
+      - run:
+          command: yarn test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +34,6 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+  build-and-test:
+    jobs:
+      - build-and-test
