--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,16 @@ jobs:
       - node/install-packages:
           pkg-manager: yarn
       - run:
-          name: Check Version
-          command: node -v
-      - run:
           name: Run tests
           command: yarn test
+  
+  console-version:
+    steps:
+      - checkout
+      - run:
+          name: Check Version
+          command: node -v
+
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -41,4 +46,11 @@ workflows:
       - say-hello
   build-and-test:
     jobs:
+      - build-and-test
+    requires:
+      - say-hello
+  console:
+    jobs:
+      - console-version
+    requires:
       - build-and-test
