--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
-    "test-cypress": "cypress run --browser chrome"
+    "cy:run:chrome": "cypress run --browser chrome"
   },
   "eslintConfig": {
     "extends": [
