--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@
 version: 2.1
 orbs:
   node: circleci/node@5.0.2
-  cypress: cypress-io/cypress@1
+  cypress: cypress-io/cypress@2
 
 executors:
   with-chrome:
@@ -62,9 +62,16 @@ workflows:
           requires:
             - build-and-test
       
-      - cypress/install
-      - cypress/run:
+      - cypress/install:
+          name: 'Cyp Install'
           requires:
-            - cypress/install
+            - build-and-test
+
+      - cypress/run:
+          name: E2E test
+          requires:
+            - build-and-test
+          parallel: false
+          start: yarn start
           executor: with-chrome
           browser: chrome
