--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,8 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 orbs:
+  cypress: cypress-io/cypress@1
   node: circleci/node@5.0.2
-  cypress: cypress-io/cypress@2.2.0
 
 executors:
   with-chrome:
@@ -69,6 +69,7 @@ workflows:
 
       - cypress/run:
           name: E2E test
+          yarn: true
           requires:
             - build-and-test
           parallel: false
