--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,7 @@ workflows:
       
       - cypress/install:
           name: 'Cyp Install'
+          yarn: true
           requires:
             - say-hello
 
@@ -71,7 +72,8 @@ workflows:
           name: E2E test
           yarn: true
           requires:
-            - say-hello
+            - build-and-test
+            - cypress/install
           parallel: false
           start: yarn start
           executor: with-chrome
