--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,6 @@ workflows:
           requires:
             - build-and-test
           parallel: false
-          start: yarn start
+          # start: yarn start
           executor: with-chrome
           browser: chrome
